--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<meta name='description' content='WebRTC Reference App' />
+	<meta name='description' content='RUSHD - Recorded by Users for remote Spectators in High Debit.' />
 	<!-- <meta name='viewport' content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1'> -->
 	<meta name='viewport' content='width=device-width' />
 	<script>var HOST_ADDRESS = '<%= hostAddress %>';</script>
