--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,15 @@
 	</head>
 	<body>  
         <main id="container">
-
+			<div id="rotate">
+				<img src="/img/logo_tjwp_degrade.png" width="50" />
+				<br>
+				<h2>The Jazz Web Project</h2>
+				<p>RUSHD Application</p>
+				<br><br>
+				<section id="rotation" class="mt-4">Please turn your device horizontally<br><img src="/img/rotate.png" width="150"></img>
+				</section>
+			</div>
 			<section id="success">
 				<img src="/img/logo_tjwp_degrade.png" width="50" />
 				<br>
@@ -27,12 +35,25 @@
 					Participation link 
 					<br><br>
 					<span>Send this link to anyone you wish to invite.
-						<br><br>
-						<a id="linkWA">
-							<div style="margin: 0 auto 8px;border-radius: 12px;padding: 20px;height: 80px;width: 80px;background-color:#25D366">
-								<img src="/img/whatsapp.svg" width="80" loading="lazy"></div>
-						</a>
-						Whatsapp
+						<div class="row">
+							<div class="col-4">
+
+								<br><br>
+								<a id="linkWA">
+									<div style="margin: 0 auto 8px;border-radius: 12px;padding: 20px;height: 80px;width: 80px;background-color:#25D366">
+										<img src="/img/whatsapp.svg" width="80" loading="lazy"></div>
+								</a>
+								Whatsapp
+							</div>
+							<div class="col-4">
+								<br><br>
+								<a id="linkFM">
+									<div style="margin: 0 auto 8px;border-radius: 12px;padding: 20px;height: 80px;width: 80px;background-color:#0080f7">
+										<img src="/img/messenger.svg" width="80" loading="lazy"></div>
+								</a>
+								Messenger
+							</div>
+						</div>
                     </span>
                 </div>
 	    	</section>
