--- a/views/room.ejs
+++ b/views/room.ejs
@@ -34,7 +34,7 @@
 						<div class="row">
 							<div class="col-12">
 								<div id="localVideoWrap" class='videoWrap'>
-									<video class="videoBox" id="localVideo" autoplay muted></video>
+									<video class="videoBox" id="localVideo" autoplay muted playsinline></video>
 									<a onclick="selectVideo('localVideo');" class="btn btn-outline-secondary mt-2"><i class="fa-solid fa-camera"></i>&nbsp;&nbsp;Select</a>
 								</div>
 							</div>
