--- a/views/room.ejs
+++ b/views/room.ejs
@@ -23,7 +23,7 @@
 		
 		<div class="row">
 			<div class="col-3">
-				<h4><img src="/img/logo_tjwp_degrade.png" width="50" class="p-2" />RUSHD</h4>
+				<a href="javascript:window.close();" style="text-decoration: none; color: black;"><h4><img src="/img/logo_tjwp_degrade.png" width="50" class="p-2" />RUSHD</h4></a>
 			</div>
 			<div class="col-9" style="text-align: center;">
 
