30 img sec enabled

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -29,7 +29,7 @@
 
 				<a onclick="javascript:document.getElementById('broadcastedVideo').requestFullscreen();" class="btn btn-outline-secondary mt-2"><i class="fa-solid fa-up-right-and-down-left-from-center"></i>&nbsp;&nbsp;Fullscreen</a>
 				<button id="record" class="btn btn-outline-secondary mt-2"><i class="fa-solid fa-circle"></i>&nbsp;&nbsp;Start Recording</button>
-				<button id="download" class="btn btn-outline-secondary mt-2"><i class="fa-solid fa-download"></i>&nbsp;&nbsp;Download</button>
+				<button id="download" class="btn btn-outline-secondary mt-2" disabled><i class="fa-solid fa-download"></i>&nbsp;&nbsp;Download</button>
 				<span style="display: none;">
 					Recording format: <select id="codecPreferences" disabled></select>
 				</span>
