--- a/views/home.ejs
+++ b/views/home.ejs
@@ -53,6 +53,14 @@
 								</a>
 								Messenger
 							</div>
+							<div class="col-4">
+								<br><br>
+								<a href="#" onclick="javascript:navigator.clipboard.writeText(document.getElementById('room-url'));">
+									<div style="margin: 0 auto 8px;border-radius: 12px;padding: 20px;height: 80px;width: 80px;background-color:#fcfcfc">
+										<img src="/img/copy.svg" width="80" loading="lazy"></div>
+								</a>
+								Copy URL
+							</div>
 						</div>
                     </span>
                 </div>
