--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,7 @@
 		<!-- <meta name='viewport' content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1'> -->
 		<meta name='viewport' content='width=device-width' />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>	
+		<script type="text/javascript" src="/plugins/js/qrcode.min.js"></script>
 		<script src='/js/home.js'></script>
 		<link rel="stylesheet" type="text/css" href="css/home.css" media="screen" />
 		<link rel="icon" href="/img/logo_tjwp_degrade.png">
@@ -31,6 +32,9 @@
 				<br><br>
 				<div id="room-link"><a id="room-url" target="_blank"></a></div>
 				<br>
+				<div class="col-4">
+					<div id="qrcode"></div>
+				</div>
 				<div class="bubble">
 					Participation link 
 					<br><br>
