--- a/views/room.ejs
+++ b/views/room.ejs
@@ -72,7 +72,7 @@
 		</section>
 	</div>
 	<canvas id="broadcastedCanvas" style="display: none;"></canvas>
-
+	<script src="/plugins/js/fix-webm-duration.js"></script>
 	<script src='/js/meeting.js'></script>
 	<script src='/js/room.js'></script>
 	<script src='/js/recorder.js'></script>
