--- a/views/room.ejs
+++ b/views/room.ejs
@@ -54,8 +54,9 @@
 							<div class="row">
 								<div class="col-12">
 									<div id="localVideoWrap" class='videoWrap'>
-										<video class="videoBox" id="localVideo" autoplay muted playsinline></video>
-										<a onclick="selectVideo('localVideo');" class="btn btn-outline-secondary mt-2"><i class="fa-solid fa-camera"></i>&nbsp;&nbsp;Select</a>
+										<video onclick="selectVideo('localVideo');" class="videoBox" id="localVideo" autoplay muted playsinline></video>
+										<button onclick="selectVideo('localVideo');" class="btn btn-outline-secondary mt-2"><i class="fa-solid fa-camera"></i></button>&nbsp;
+										<button onclick="selectAudio('localVideo', this);" class="btn btn-outline-secondary mt-2 btn-audio btn-audio-active"><i class="fa-solid fa-microphone"></i></button>
 									</div>
 								</div>
 							</div>
@@ -72,10 +73,11 @@
 		</section>
 	</div>
 	<canvas id="broadcastedCanvas" style="display: none;"></canvas>
+	<input id="selectedAudio" name="selectedAudio" value="localVideo" type="hidden"></input>
 	<script src="/plugins/js/fix-webm-duration.js"></script>
 	<script src='/js/meeting.js'></script>
-	<script src='/js/room.js'></script>
 	<script src='/js/recorder.js'></script>
+	<script src='/js/room.js'></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
