--- a/views/room.ejs
+++ b/views/room.ejs
@@ -54,7 +54,7 @@
 							<div class="row">
 								<div class="col-12">
 									<div id="localVideoWrap" class='videoWrap'>
-										<video onclick="selectVideo('localVideo');" class="videoBox" id="localVideo" autoplay muted playsinline></video>
+										<video onclick="selectVideo('localVideo');" class="videoBox" id="localVideo" autoplay="true" muted="true" playsinline="true"></video>
 										<button onclick="selectVideo('localVideo');" class="btn btn-outline-secondary mt-2"><i class="fa-solid fa-camera"></i></button>&nbsp;
 										<button onclick="selectAudio('localVideo', this);" class="btn btn-outline-secondary mt-2 btn-audio btn-audio-active"><i class="fa-solid fa-microphone"></i></button>
 									</div>
@@ -66,7 +66,7 @@
 				</div>
 				<div class="col-9">
 					<div id="broadcastedVideoWrap">
-						<video class="videoBox" id="broadcastedVideo" autoplay="" playsinline muted></video>
+						<video class="videoBox" id="broadcastedVideo" autoplay="true" playsinline="true" muted="true"></video>
 					</div>
 				</div>
 			</div>
