--- a/views/room.ejs
+++ b/views/room.ejs
@@ -72,7 +72,7 @@
 			</div>
 		</section>
 	</div>
-	<canvas id="broadcastedCanvas" style="display: none;"></canvas>
+	<canvas id="broadcastedCanvas" style="display: block;"></canvas>
 	<input id="selectedAudio" name="selectedAudio" value="localVideo" type="hidden"></input>
 	<script src="/plugins/js/fix-webm-duration.js"></script>
 	<script src='/js/meeting.js'></script>
