--- a/views/room.ejs
+++ b/views/room.ejs
@@ -74,6 +74,7 @@
 	</div>
 	<canvas id="broadcastedCanvas" style="display: none;"></canvas>
 	<input id="selectedAudio" name="selectedAudio" value="localVideo" type="hidden"></input>
+	<script src="/plugins/js/adapter.js"></script>
 	<script src="/plugins/js/fix-webm-duration.js"></script>
 	<script src='/js/meeting.js'></script>
 	<script src='/js/recorder.js'></script>
