No fullscreen on iphone

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -38,7 +38,7 @@
 				</div>
 				<div class="col-9" style="text-align: center;">
 
-					<a onclick="javascript:document.getElementById('broadcastedVideo').requestFullscreen();" class="btn btn-outline-secondary mt-2"><i class="fa-solid fa-up-right-and-down-left-from-center"></i>&nbsp;&nbsp;Fullscreen</a>
+					<a id="fullscreen" onclick="javascript:document.getElementById('broadcastedVideo').requestFullscreen();" class="btn btn-outline-secondary mt-2" style="display: none;"><i class="fa-solid fa-up-right-and-down-left-from-center"></i>&nbsp;&nbsp;Fullscreen</a>
 					<button id="record" class="btn btn-outline-secondary mt-2"><i class="fa-solid fa-circle"></i>&nbsp;&nbsp;Start Recording</button>
 					<button id="download" class="btn btn-outline-secondary mt-2" disabled><i class="fa-solid fa-download"></i>&nbsp;&nbsp;Download</button>
 					<span style="display: none;">
