--- a/views/room.ejs
+++ b/views/room.ejs
@@ -76,6 +76,7 @@
 	<input id="selectedAudio" name="selectedAudio" value="localVideo" type="hidden"></input>
 	<script src="/plugins/js/adapter.js"></script>
 	<script src="/plugins/js/fix-webm-duration.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.min.js" ></script>
 	<script src='/js/meeting.js'></script>
 	<script src='/js/recorder.js'></script>
 	<script src='/js/room.js'></script>
